<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_run"
        android:icon="@drawable/ic_play_arrow"
        android:title="@string/action_run"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_layout_toggle"
        android:icon="@drawable/ic_split_view"
        android:title="@string/layout_toggle"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_templates"
        android:icon="@drawable/ic_palette"
        android:title="@string/action_templates"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_resources"
        android:icon="@drawable/ic_library_add"
        android:title="@string/action_resources"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_format"
        android:icon="@drawable/ic_format"
        android:title="@string/action_format"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_html"
        android:icon="@drawable/ic_share"
        android:title="@string/action_export_html"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
